tests/cases/error/error_undefined_include_var.rapt
# line 1
INCLUDE dummy foo=bar
# line 3
